--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "formik": "^2.1.7",
+    "icomoon-react": "^2.0.16",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-datepicker": "^3.2.2",
