--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-html-parser": "^2.0.2",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "yup": "^0.29.3"
   },
   "scripts": {
