--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/",
+  "proxy": "http://localhost:5001/",
+  "secure":false,
   "devDependencies": {
     "node-sass": "^4.14.1"
   }
