--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.1.7",
     "icomoon-react": "^2.0.16",
     "jquery": "^3.5.1",
+    "jwt-decode": "^3.0.0",
     "react": "^16.13.1",
     "react-datepicker": "^3.2.2",
     "react-dom": "^16.13.1",
@@ -42,7 +43,7 @@
     ]
   },
   "proxy": "http://localhost:2000/",
-  "secure":false,
+  "secure": false,
   "devDependencies": {
     "node-sass": "^4.14.1"
   }
